--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,18 @@ body {
     font-family: "Barlow", sans-serif;
     font-weight: 600;
     font-style: normal;
+    margin: 0;
+    padding: 0;
 }
 
 nav {
   display: flex;
   justify-content: space-around;
-  width:30%
+  width:30%;
+  color: white;
+  align-items: center;
+  font-size: 18px;
+  margin-top: 2rem;
 }
 
 #navigation {
@@ -21,8 +27,9 @@ nav {
   align-items: center;
 }
 
-#logo_text {
+#logo {
   margin-left: 2rem;
+  margin-top: 2rem;
 }
 
 header {
@@ -33,3 +40,14 @@ header {
   background-repeat: no-repeat;
   background-size: 100% auto;
 }
+
+#contact {
+  color:black;
+  border: 1px white solid;
+  border-radius: 28px;
+  background-color: white;
+  padding: 1rem;
+  font-family: Fraunces;
+  font-size: 15px;
+}
+
