--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ header {
   margin-top: 9rem;
 }
 
-#transform, #standout {
+.section {
   display:flex;
   justify-content: center;
 }
@@ -94,7 +94,7 @@ header {
   height: 600px;
 }
 
-#transform-image, #standout-image {
+.images {
   height: 600px;
   width:50%;
 }
