--- a/styles.css
+++ b/styles.css
@@ -114,4 +114,23 @@ header {
   background-color: #90D4C6;
   width: 100%;
   height: 350px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#footer-nav {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  gap: 50px;
+}
+
+#footer-links {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 25px;
 }
